// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-19piv82-Button"
        data-testid="button"
        disabled={true}
      >
        <span
          className="css-9nhvja-Button"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-rzul1v-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1aci5jp-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1npfjgt-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-9usu1j-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1xdbx2g-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1i0lxzi-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-poqihd-Button"
        data-testid="button"
        disabled={false}
      >
        <span
          className="css-9nhvja-Button"
        >
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1pid8fm-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-1yy8u54-Button"
    >
      <div
        className="css-hy13us-Button"
      >
        <img
          height="16"
          src="https://brandmark.io/logo-rank/random/pepsi.png"
          width="16"
        />
      </div>
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-usr5zn-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      change me!
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1pid8fm-Button"
        data-testid="button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-hy13us-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-19cl32s-Button"
        data-testid="button-size-md"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-hy13us-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1qxrlsw-Button"
        data-testid="button-size-sm"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-1qy2jjj-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </div>
          Hello world
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-b5nte3-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1xdbx2g-Button"
    data-testid="button"
    disabled={false}
  >
    <span
      className="css-9nhvja-Button"
    >
      Hello world
    </span>
  </button>
</div>
`;
